# UnderfloorHeatingController

./: .gitignore  CMakeLists.txt  Jenkinsfile  UnderfloorHeatingController.code-workspace  partitions.csv  sdkconfig  sdkconfig.defaults
ThermostatValveController/: CMakeLists.txt  ThermostatValveController.sln  sdkconfig
ThermostatValveController/ThermostatValveController/: Controller.cpp  Controller.h  ThermostatValveController.ino  ThermostatValveController.vcxproj  ThermostatValveController.vcxproj.filters
ThermostatValveController/ThermostatValveController/__vm/: .ThermostatValveController.vsarduino.h  Configuration.Release.vmps.xml  Upload.vmps.xml
ThermostatValveController/main/: CMakeLists.txt  Callback.h  Controller.cpp  Controller.h  DemoDriverProgram.cpp  DemoDriverProgram.h  DriverProgram.h  HardMoveDriverProgram.cpp  HardMoveDriverProgram.h  TuningDriverProgram.cpp  TuningDriverProgram.h  idf_component.yml  includes.h  main.cpp  support.cpp  support.h
ThermostatValveController/scripts/: dockerbuild.sh  upload.sh
ThermostatValveController/support/: Setup.fzz  Silent2209 - FYSETC WIKI.html
assets/Board/UnderfloorHeatingController/: .gitignore  (+12 more)
main/: ACS725.cpp  ACS725.h  Application.cpp  Application.h  CMakeLists.txt  Device.cpp  Device.h  DeviceConfiguration.cpp  DeviceConfiguration.h  DeviceState.h  Kconfig.projbuild  MQTTConnection.cpp  MQTTConnection.h  UFHController.cpp  UFHController.h  idf_component.yml  main.cpp  support.cpp  support.h
scripts/: generate-secrets.py  upload.ps1  upload.sh
tools/dev-upload/: Dockerfile  upload.bat
(+1 files in other folders)
